# rigidbody-sim

./: CMakeLists.txt  vcpkg.json
app/: CMakeLists.txt
app/src/: app.cpp
core/: CMakeLists.txt
core/include/models/: rigidbody.h
core/include/renderer/: index_buffer.h  renderer.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
core/src/: index_buffer.cpp  renderer.cpp  rigidbody.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
tests/src/arithmetic-test/: add_test.cpp
